objects/LLC_BI__Context__mdt.object
<CustomObject>
    <description>This object is used to give context to an SObjectField and it&apos;s associated SObjectType.</description>
    <fields>
        <fullName>LLC_BI__Field_Set_API_Name__c</fullName>
        <description>This optional field contains an API name of a field set.</description>
        <inlineHelpText>A field set used for the SObjectType.</inlineHelpText>
        <label>Field Set API Name</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__SObjectField__c</fullName>
        <description>This optional field contains an API name to a SObjectField.</description>
        <inlineHelpText>A SObjectField to be used in conjunction with it&apos;s associated SObjectType.</inlineHelpText>
        <label>SObjectField</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__SObjectType__c</fullName>
        <description>This optional field contains an API name to a SObjectType.</description>
        <inlineHelpText>A SObjectType used to determine describe the type of the associated SObjectField.</inlineHelpText>
        <label>SObjectType</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <label>Context</label>
    <listViews>
        <fullName>ALL</fullName>
        <columns>MasterLabel</columns>
        <columns>DeveloperName</columns>
        <columns>NamespacePrefix</columns>
        <columns>LLC_BI__SObjectField__c</columns>
        <columns>LLC_BI__SObjectType__c</columns>
        <filterScope>Everything</filterScope>
        <label>ALL</label>
        <language>en_US</language>
    </listViews>
    <pluralLabel>Contexts</pluralLabel>
</CustomObject>